Delete unnecessary code, Fix align slider and color picker

--- a/public/style.css
+++ b/public/style.css
@@ -11,39 +11,10 @@ html, body{
     padding-bottom: 3rem;
 }
 
-#nestedbar{
-    background-color:#674E7F;
-}
-
 .title{
     font-family: 'Comfortaa', sans-serif;
     font-size:50px;
     color:white;
-}
-/* Basically does nothing for some reason, gonna look into it.
-  .accordion {
-    background-color: #674E7F;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-  }
-   */
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-    background-color: #674E7F;
-}
-
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-    padding: 0 18px;
-
-    display: none;
-    overflow: hidden;
 }
 .circle.flex {
     display: flex;
@@ -68,12 +39,7 @@ html, body{
     padding: 14px 28px; /* Add some padding */
     cursor: pointer; /* Add a pointer cursor on mouse-over */
 }
-/*.container{
-  justify-content: space-between;
-  flex-direction: column;
-  height: 100vh;
-  display: flex;
-}*/
+
 .btn_holder{
     position:absolute;
     left: 5%;
@@ -88,14 +54,6 @@ html, body{
     border:0px;
 }
 
-.sidenav > a {
-    font-size:20px;
-    display:block; /*Each its own block/line */
-    margin-top:50px;
-    text-align:center;
-    padding:7px; /*Easier selecting of the modes*/
-    color:white;
-}
 
 
 .w3-bar-item, .w3-button{
@@ -197,10 +155,12 @@ input:checked + .slider.round:before {
 
 #colours{
     visibility: hidden;
+    float:left;
 }
 
-#musicToggle{
+#slidr{
     visibility: hidden;
+    float:right;
 }
 
 .slidecontainer {
